--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,27 @@ body {
     background: #555;
 }
 
-.responsive-main {
-    left: 0;
+.server-selector>button.active,
+.server-selector>button:hover {
+    background: #f46700;
+    border-radius: 24px;
+    box-shadow: 0 4px 29px rgba(0, 0, 0, .05);
+    opacity: .8;
+}
+
+.server-selector>button.active {
+    border: 3px solid #fb9;
+}
+
+.server-selector>button {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    align-items: center;
+    background: #ffe1cc;
+    border-radius: 24px;
+    cursor: pointer;
+    height: 72px;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    transition: .3s;
 }
