--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,18 @@ header .logo img {
     height: 50px;
 }
 
+.header a {
+    margin-left: 20px;
+    color: #d6f5ff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.header a:hover {
+    color: white;
+}
+
 .desktop-nav a {
     margin-left: 20px;
     text-decoration: none;
