--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header .logo img {
     height: 50px;
 }
 
-.header a {
+.desktop-nav a {
     margin-left: 20px;
     color: #d6f5ff;
     text-decoration: none;
@@ -41,15 +41,8 @@ header .logo img {
     transition: 0.3s;
 }
 
-.header a:hover {
+.desktop-nav a:hover {
     color: white;
-}
-
-.desktop-nav a {
-    margin-left: 20px;
-    text-decoration: none;
-    color: #333;
-    font-weight: 600;
 }
 
 .desktop-nav {
