--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header .logo img {
 }
 
 header .logo p {
-    color: #00ffd5ff;
+    color: #90fceaff;
 }
 
 .desktop-nav a {
@@ -66,7 +66,7 @@ header .logo p {
 .burger span {
     width: 25px;
     height: 3px;
-    background: #333;
+    background: #7cfce0ff;
     border-radius: 3px;
 }
 
