--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ header .logo p {
 
 .desktop-nav a {
     margin-left: 20px;
-    color: #d6f5ff;
+    color: #2b5563ff;
     text-decoration: none;
     font-weight: bold;
     transition: 0.3s;
@@ -50,6 +50,7 @@ header .logo p {
 
 .desktop-nav a:hover {
     color: rgba(43, 76, 82, 1);
+
 }
 
 .desktop-nav {
